--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "displayName": "Graph Man",
   "description": "This Extension is a Tester for GraphQL Queries and Mutations.",
   "version": "0.0.1",
-  "icon": "src/assets/icon.webp",
+  "icon": "icon.webp",
   "engines": {
     "vscode": "^1.89.0"
   },
-  "categories": [
-    "GraphQL"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gitsunmin/graph-man.git"
+  },
   "publisher": "gitsunmin",
   "main": "./dist/extension.js",
   "activationEvents": [
@@ -105,7 +106,7 @@
     "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.4.5"
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "react": "^18.3.1",
