--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/react": "^18.3.3",
