🚨 fix compile error

--- a/package.json
+++ b/package.json
@@ -88,33 +88,35 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "bun run package",
-		"compile": "bun run check-types && bun run lint && node esbuild.js",
+		"compile": "bun run check-types && bun run lint && bun esbuild.js",
 		"watch": "npm-run-all -p watch:*",
 		"watch:esbuild": "node esbuild.js --watch",
 		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-		"package": "bun run check-types && bun run lint && node esbuild.js --production",
+		"package": "bun run check-types && bun run lint && bun esbuild.js --production",
 		"compile-tests": "tsc -p . --outDir out",
 		"watch-tests": "tsc -p . -w --outDir out",
 		"pretest": "bun run compile-tests && bun run compile && bun run lint",
 		"check-types": "tsc --noEmit",
-		"lint": "eslint src --ext ts",
-		"test": "vscode-test"
+		"lint": "bunx @biomejs/biome check --write ./src",
+		"test": "vscode-test",
+		"publish": "vsce publish"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.2",
+		"@biomejs/biome": "^1.8.2",
 		"@types/mocha": "^10.0.6",
 		"@types/node": "18.x",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/vscode": "^1.89.0",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
 		"@vscode/test-cli": "^0.0.9",
 		"@vscode/test-electron": "^2.3.9",
-		"esbuild": "^0.20.2",
+		"@typescript-eslint/eslint-plugin": "^7.7.1",
+		"@typescript-eslint/parser": "^7.7.1",
 		"eslint": "^8.57.0",
+		"esbuild": "^0.20.2",
 		"npm-run-all": "^4.1.5",
-		"typescript": "5.3.3"
+		"typescript": "5.3.3",
+		"vsce": "^2.15.0"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
