🐛 Update the icon to be seen in the ".gql" file as well

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
 				{
 					"command": "graph-man.send-graphql",
 					"group": "navigation",
-					"when": "resource =~ /.graph-man/ && resourceExtname == '.graphql'"
+					"when": "resource =~ /.graph-man/ && resourceExtname == '.graphql' || resourceExtname == '.gql'"
 				}
 			]
 		}
