--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,23 @@
 			"ES2022"
 		],
 		"sourceMap": true,
-		"rootDir": "src",
+		"rootDir": ".",
 		"strict": true,
 		/* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		"noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		"noUnusedParameters": true  /* Report errors on unused parameters. */
-	}
+		"noUnusedParameters": true,  /* Report errors on unused parameters. */
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"useUnknownInCatchVariables": true,
+	},
+	"exclude": [
+		"node_modules",
+		"example",
+	],
 }
