--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "graph-man",
 	"displayName": "Graph Man",
 	"description": "This Extension is a Tester for GraphQL Queries and Mutations.",
-	"version": "0.3.0",
+	"version": "0.3.0-hotfix",
 	"icon": "icon.webp",
 	"engines": {
 		"vscode": "^1.89.0"
