✏️ Fix typo in Graph Man command title ("Graph Man: Send Graphql" to "Graph Man: Send GraphQL")

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 			},
 			{
 				"command": "graph-man.send-graphql",
-				"title": "Graph Man: Send Graphql",
+				"title": "Graph Man: Send GraphQL",
 				"icon": "$(send)"
 			},
 			{
